# xiu_xian

./: project.godot
rscode/: .gitignore  Cargo.toml
rscode/hello/: Cargo.toml
rscode/src/example/: hello.rs
scene/: Node2D.tscn
script/: hello.gdnlib  hello.gdns
