[package]
name = "rscode"
version = "0.1.0"
authors = ["wws <1274704958@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdnative = "0.9.1"

[lib]
crate-type = ["cdylib"]


[[example]]
name = "hello"
path = "src/example/hello.rs"
crate-type = ["cdylib"]
